# VizQL-Data-Service

./: .openapi-generator-ignore  CONTRIBUTING.md  LICENSE.txt  README.md  VizQLDataServiceOpenAPISchema.json
.codegenie/customizations/: test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: manual.yml  pull.yml  push.yml  python_build.yml  python_generate_stub.yml  python_gitlab_ci.yml  python_test.yml  release.yml
python-sdk/: README.md
python-sdk/examples/: async_example.py
python-sdk/examples/payloads/: query_request.json
python-sdk/src/api/: BaseVizqlDataServiceHTTPClient.py  HTTPHeaders.py  SyncHTTPClient.py
python-sdk/src/models/: server.py
python-sdk/src/utils/: file_util.py
python-sdk/tests/: test_query.py
python_sdk/: .flake8  .gitignore  .openapi-generator-ignore  CHANGELOG  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  OpenApiClient.py  README.md  mypy.ini  openapi-client.yml  openapi_client.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt
python_sdk/.github/workflows/: generate_stub.yml
python_sdk/examples/: async_example.py  sync_example.py
python_sdk/examples/payloads/: query_request.json  read_metadata_request.json
python_sdk/openapi_client/: __init__.py  types.py
python_sdk/openapi_client/api/default/: query_datasource.py  read_metadata.py  simple_request.py
python_sdk/openapi_client/models/: __init__.py  connection.py  datasource.py  field_base.py  field_metadata.py  field_metadata_data_type.py  field_with_calculation.py  field_with_caption.py  field_with_caption_function.py  filter_.py  filter_by_calculation.py  filter_by_caption.py  filter_by_caption_function.py  filter_field_with_calculation.py  filter_field_with_caption.py  filter_field_with_caption_function.py  filter_filter_type.py  function.py  match_filter.py  metadata_output.py  quantitative_date_filter.py  quantitative_filter_base.py  quantitative_filter_base_quantitative_filter_type.py  quantitative_numerical_filter.py  query.py  query_datasource_options.py  query_options.py  query_output.py  query_request.py  read_metadata_request.py  relative_date_filter.py  relative_date_filter_date_range_type.py  relative_date_filter_period_type.py  return_format.py  set_filter.py  sort_direction.py  tableau_error.py  tableau_error_debug.py  top_n_filter.py  top_n_filter_direction.py
python_sdk/scripts/: add_enum_docstrings.py  build.sh  check_version.sh  convert_schema.py  generate.sh  generate_stub.bat  generate_stub.sh  post_process.py  publish.sh  test.sh
python_sdk/src/: __init__.py  client.py  server.py  utils.py
python_sdk/src/api/: AsyncHTTPClient.py  BaseVizqlDataServiceHTTPClient.py  EndPoints.py  HTTPHeaders.py  SyncHTTPClient.py  __init__.py  client.py  query_datasource.py  read_metadata.py  tableau_model.py
python_sdk/src/examples/: async_example.py  async_examples.py  common.py  example.py  examples.py  payload.py  payload_new.py  sync_example.py  sync_examples.py  test.py
python_sdk/src/examples/helpers/: client.py  common.py
python_sdk/src/models/: server.py  user.py
python_sdk/src/utils/: file_util.py
python_sdk/tests/: test_api_clients.py  test_client.py  test_query.py  test_query_datasource.py  test_read_metadata.py  test_server.py  test_utils.py
