[build-system]
requires = ["setuptools>=58.4.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vizql-data-service-python-sdk"
version = "1.0.0"  # This value is manually updated. The major version must always be the same as the version defined in VizQLDataServiceOpenAPISchema.json

description = "A Python client library for interacting with the VizQL Data Service API"
readme = "README.md"
authors = [{name = "Tableau", email = "github@tableau.com"}]
maintainers = [{name = "Tableau", email = "github@tableau.com"}]
license = "MIT"
license-files = ["./LICENSE.txt"]

requires-python = ">= 3.9"
dependencies = [
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "defusedxml>=0.7.1",
    "distlib>=0.3.6",
    "filelock>=3.10.7",
    "future>=0.17.1",
    "idna>=3.10",
    "packaging>=24.2",
    "platformdirs>=2.6.2",
    "requests>=2.32.3",
    "setuptools>=58.4.0",
    "six>=1.16.0",
    "tableauserverclient>=0.36",
    "virtualenv>=20.15.1",
    "wheel>=0.37.0",
    "python-dateutil>=2.8.2",
    "httpx>=0.23.3",
    "urllib3>=1.25.3,<3.0.0",
    "pydantic<2",
    "aenum >= 3.1.11",
    "typing-extensions>=4.7.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["vizqldataservice", "tableau"]

[project.urls]
"Homepage" = "https://github.com/tableau/VizQL-Data-Service/python_sdk"
"Bug Tracker" = "https://github.com/tableau/VizQL-Data-Service/issues"
# TODO: add documentation URL "Documentation" = ""
"Source Code" = "https://github.com/tableau/VizQL-Data-Service/python_sdk"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [
    ".venv",
    "venv",
    ".env",
    "build",
    "dist",
    "openapi_client",
    "setup.py",
    "__init__.py"
]